# flask_API

./: .blueignore  .flaskenv  .gitignore  Instructions.md  config.py  mkdocs.yml  pyproject.toml  run.py
docs/: index.md
flask_api/: __init__.py
flask_api/entities/: employer.py
flask_api/models/: employer_model.py
flask_api/schemas/: employer_schema.py
flask_api/services/: employer_service.py
flask_api/views/: employers_views.py
src/: run.py
src/flask_api/: __init__.py
src/flask_api/views/: employers_views.py  tarefa_views.py
tests/: test_flask_api.py
