[project]
name = "flask-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Soares",email = "lucas_1801@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "flask_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
